overflow solved

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 *{
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+}
+
+h1,h2{
+    overflow-y: hidden;
 }
 
 #nav-bar{
@@ -21,7 +26,7 @@
 
 .navbar-brand img{
     height: 62px;
-    padding-left: 50px;
+    padding-left: 18px;
 }
 
 .navbar-nav li{
@@ -36,14 +41,16 @@
 }
 
 .navbar-toggler-icon{
-    font-size: 25px !important;
-    color: orangered;
+    font-size: 16px !important;
+    
 }
 
 .navbar-toggler{
-    outline: none !important;
-    color: orangered;
+    outline: orangered !important;
+    color: #b8b7b7 !important;
 }
+
+/* ---------------------------Home------------------------------ */
 
 #home{
     width: 100%;
@@ -51,7 +58,7 @@
     background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(../images/main.jpg) no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-position: 95% 100%;
+    background-position: 80% 100%;
 }
 
 #home h2{
@@ -60,24 +67,14 @@
     margin-top: 140px;
     color: #fff;
     /* border: 1px solid #fff; */
-    border-radius: 10px;
+    /* border-radius: 10px;
     padding: 50px;
-    width: 450px;
-    background: rgba(226, 225, 225,0.2);
+    width: 420px;
+    background: rgba(226, 225, 225,0.2); */
 }
 
+ /* ---------------------------------------------------------- */
  
-/* #content .testimonial img{
-    background-size: cover;
-    background-position: 80% 30%;
-    width: 100%;
-    height: 70%;
-    border-radius: 10px;
-    cursor: pointer;
-    box-shadow: 0 0 7px #bababa;
-} */
-
-/* ---------------------------------------------------------- */
 #content .box{
     font-family: 'Cairo', sans-serif;
     /* text-align: center; */
@@ -133,10 +130,12 @@
 
 #content .box p{
     color: black;
-    
-}
+    }
 
 /* ----------------------------------------- */
+#pollo h1{
+    overflow-y: hidden;
+}
 
 #pollo{
     width: 100%;
@@ -274,6 +273,8 @@
     padding-left: 400px;
     padding-top: 50px;
     margin-bottom: 100px;
+    
+
 }
 
 #business .shope-local-right h2 p{
@@ -328,4 +329,30 @@
 
 #footer h5 a:hover{
     color: #017c8b;
+}
+@media (max-width:870px) {
+    #business .shope-local-left img{
+        width: 100%;
+        position: relative;
+      
+    }
+    
+#business .shope-local-right{
+    width: 100%;
+    height: 650px;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 9px;
+    background: rgb(53, 50, 50);
+    color: white;
+    margin-top: 40px;
+}
+#business .shope-local-right h2 p{
+   
+    
+    display: block;
+    box-sizing: border-box;
+    line-height: 1.2;
+}
+
 }
